--- a/src/com/github/dougkelly88/FLIMPlateReaderGUI/LightPathClasses/GUIComponents/LightPathPanel.form
+++ b/src/com/github/dougkelly88/FLIMPlateReaderGUI/LightPathClasses/GUIComponents/LightPathPanel.form
@@ -19,6 +19,7 @@
           <Component id="Olympus" alignment="0" max="32767" attributes="0"/>
           <Component id="Filters" alignment="0" max="32767" attributes="0"/>
           <Component id="excitationSource" alignment="0" max="32767" attributes="0"/>
+          <Component id="Camera" alignment="0" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
@@ -29,7 +30,9 @@
               <Component id="Filters" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="Olympus" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="87" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="Camera" min="-2" max="-2" attributes="0"/>
+              <EmptySpace pref="89" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -418,6 +421,59 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Output port"/>
           </Properties>
+        </Component>
+      </SubComponents>
+    </Container>
+    <Container class="javax.swing.JPanel" name="Camera">
+      <Properties>
+        <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+          <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
+            <TitledBorder title="Camera"/>
+          </Border>
+        </Property>
+      </Properties>
+
+      <Layout>
+        <DimensionLayout dim="0">
+          <Group type="103" groupAlignment="0" attributes="0">
+              <Group type="102" alignment="0" attributes="0">
+                  <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
+                  <Component id="flimCamera" min="-2" pref="157" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
+                  <Component id="bfCamera" min="-2" pref="157" max="-2" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
+              </Group>
+          </Group>
+        </DimensionLayout>
+        <DimensionLayout dim="1">
+          <Group type="103" groupAlignment="0" attributes="0">
+              <Group type="102" alignment="0" attributes="0">
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="flimCamera" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="bfCamera" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <EmptySpace pref="20" max="32767" attributes="0"/>
+              </Group>
+          </Group>
+        </DimensionLayout>
+      </Layout>
+      <SubComponents>
+        <Component class="javax.swing.JButton" name="flimCamera">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="FLIM cam"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="flimCameraActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JButton" name="bfCamera">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="brightfield cam"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bfCameraActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
